--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,27 @@ h2,
 h3 {
     font-family: "Vollkorn", serif;
 }
+a {
+    text-decoration: none;
+    color: unset;
+}
+a:hover {
+    color: #ffcc33;
+}
+body {
+    overflow-x: hidden;
+}
 .nav-link {
     color: unset !important;
-    font-size: 16px;
+    font-size: 12px;
     transition: 0.2s ease-out;
     font-weight: 500;
+    margin-right: 12px;
 }
 .nav-link:hover {
     text-shadow: 0 0 7px #4ca148, 0 0 10px #4ca148, 0 0 21px #4ca148,
         0 0 42px #4ca148, 0 0 82px #4ca148, 0 0 92px #4ca148;
+}
+.navbar-toggler:focus {
+    box-shadow: none;
 }
